Fix line roll-over on smallest mobile tabs text

--- a/support-frontend/assets/components/productPage/productPageTabs/productPageTabs.scss
+++ b/support-frontend/assets/components/productPage/productPageTabs/productPageTabs.scss
@@ -44,6 +44,9 @@
   transition: box-shadow 0.2s;
   line-height: 1;
   cursor: pointer;
+  @include mq($until:mobileMedium) {
+    font-size: 16px;
+  }
 
   @include mq($from:phablet) {
     min-width: gu-span(3) + $gu-h-spacing/2;
